# auto-resume-pipeline

./: Jaepil_Choi_CV.tex  README.md  pyproject.toml  todo.md
src/: Jaepil_Choi_CV.yaml
src/engineeringenglish/: __init__.py
src/markdown/: Header.j2.md
